Updated index.html and main.css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,46 @@
 </head>
 
 <body>
-    
+    <nav>
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href="">Projects</a>
+        <a href="">Contact</a>
+    </nav>
+
+    <div id="about-me">
+        <br>Hello, I'm me! Hope you like that!<br>
+    </div>
+
+    <main>
+        <div id="projects">
+            <h2>Projects:</h2>
+            <article>
+                <h3>Project 1</h3>
+
+            </article>
+
+            <article>
+                <h3>Project 2</h3>
+
+            </article>
+
+            <article>
+                <h3>Project 3</h3>
+
+            </article>
+
+            <article>
+                <h3>Project 4</h3>
+
+            </article>
+
+            <article>
+                <h3>Project 5</h3>
+                
+            </article>
+        </div>
+    </main>
 </body>
 
 </html>
