Updated index.html and main.css and added an images folder.

--- a/index.html
+++ b/index.html
@@ -9,32 +9,42 @@
 
 <body>
     <nav>
-        <a href="">Home</a>
-        <a href="">About</a>
-        <a href="">Projects</a>
-        <a href="">Contact</a>
+        <a href="" style="color: white;">Home</a>
+        <a href="#about-me" style="color: white;">About</a>
+        <a href="#projects" style="color: white;">Projects</a>
+        <a href="" style="color: white;">Contact</a>
     </nav>
 
     <div id="about-me">
-        <br>Hello, I'm me! Hope you like that!<br>
+        <h2>About Me:</h2>
+        Hello, I'm me! Hope you like that!<br>
+        Here are some images to fill up space!<br><br>
+        <img src="images/ricepudding.jpg" alt="Some delicious rice pudding!">
     </div>
 
     <main>
         <div id="projects">
-            <h2>Projects:</h2>
+            <br><h2>Some HTML / CSS Projects:</h2>
             <article>
-                <h3>Project 1</h3>
-
+                <h3>Fix My Page</h3>
+                <p>
+                    The project revolved around a broken page with various faults in the HTML code. We (the students) had to find and resolve errors in the HTML to fix the page.
+                </p>
             </article>
 
             <article>
-                <h3>Project 2</h3>
-
+                <h3>Test Your Skills</h3>
+                <p>
+                    This project was similar to <em>Fix My Page</em> but contained more code to be fixed.  
+                </p>
             </article>
 
             <article>
-                <h3>Project 3</h3>
-
+                <h3>Understanding CSS</h3>
+                <p>
+                    To better understand CSS, this project required us to implement all forms of CSS code into our HTML, including inline, external, and embedded.<br>
+                    In addition to this, the project tested knowledge of relative links since we needed images and a link to our external CSS.
+                </p>
             </article>
 
             <article>
