Updated and finished index.html and main.css. Only concern is that breakpoints are not triggered when dimension changes are simulated through dev tools. Works with window size changes though.

--- a/index.html
+++ b/index.html
@@ -17,44 +17,59 @@
 
     <div id="about-me">
         <h2>About Me:</h2>
-        Hello, I'm me! Hope you like that!<br>
-        Here are some images to fill up space!<br><br>
-        <img src="images/ricepudding.jpg" alt="Some delicious rice pudding!">
+        <p>
+            Hello, I'm [YOSGART GARCIA]. I'm an aspiring web developer eager to learn more about web design!<br>
+            Here is an image of rice pudding--my favorite dessert--to fill up space. :)<br><br>
+        </p>
+        <img src="images/ricepudding3.jpg" alt="Some delicious rice pudding!" width="550">
     </div>
 
     <main>
         <div id="projects">
-            <br><h2>Some HTML / CSS Projects:</h2>
+            <br>
+            <h2>Some HTML / CSS Projects:</h2>
             <article>
                 <h3>Fix My Page</h3>
                 <p>
-                    The project revolved around a broken page with various faults in the HTML code. We (the students) had to find and resolve errors in the HTML to fix the page.
+                    The project revolved around a broken page with various faults in the HTML code. We (the students)
+                    had to find and resolve errors in the HTML to fix the page.
                 </p>
             </article>
 
             <article>
                 <h3>Test Your Skills</h3>
                 <p>
-                    This project was similar to <em>Fix My Page</em> but contained more code to be fixed.  
+                    This project was similar to <em>Fix My Page</em> but contained more code to be fixed.
                 </p>
             </article>
 
             <article>
                 <h3>Understanding CSS</h3>
                 <p>
-                    To better understand CSS, this project required us to implement all forms of CSS code into our HTML, including inline, external, and embedded.<br>
-                    In addition to this, the project tested knowledge of relative links since we needed images and a link to our external CSS.
+                    To better understand CSS, this project required us to implement all forms of CSS code into our HTML,
+                    including inline, external, and embedded.<br>
+                    In addition to this, the project tested knowledge of relative links since we needed images and a
+                    link to our external CSS.
                 </p>
             </article>
 
             <article>
-                <h3>Project 4</h3>
-
+                <h3>Personal Project</h3>
+                <p>
+                    For our first perfomance test we could make a website about any personal subject we would like to
+                    talk about.<br>
+                    Although not very personal, I made mine about <em>Dante's Inferno</em> since I was reading it in my
+                    integrated class.
+                    We had to meet certain requirements for the content in our code for a good score.<br>
+                    Varied use of CSS and HTML was needed in addition to personal research of new tags and declarations.
+                </p>
             </article>
 
             <article>
-                <h3>Project 5</h3>
-                
+                <h3>Buiding a Responsive Website</h3>
+                <p>
+                    So, funny story...
+                </p>
             </article>
         </div>
     </main>
